--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -14,8 +14,9 @@
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
-
-//nz
+ 
+//nz  
+@import "nz/fancybox";    // fancybox
 @import "nz/general";    // general body styles
 @import "nz/carousel";    // NZ carousel
 @import "nz/list-styles/common";    // css3 effects
@@ -31,4 +32,4 @@
 @import "nz/footer-menu";    // footer menu
 @import "nz/event";    // footer menu
 @import "nz/gravity-forms";    // footer menu
-   
+    
