--- a/wp-content/themes/tm/assets/less/_bootstrap.less
+++ b/wp-content/themes/tm/assets/less/_bootstrap.less
@@ -9,6 +9,8 @@
 @import "_variables"; // Bootstrap variable overrides and custom variables
 
 // Mixins: Utilities
+/*
+*/
 @import "../vendor/bootstrap/less/mixins/hide-text";
 @import "../vendor/bootstrap/less/mixins/opacity";
 @import "../vendor/bootstrap/less/mixins/image";
@@ -23,6 +25,8 @@
 @import "../vendor/bootstrap/less/mixins/vendor-prefixes";
 
 // Mixins: Components
+/*
+*/
 @import "../vendor/bootstrap/less/mixins/alerts";
 @import "../vendor/bootstrap/less/mixins/buttons";
 @import "../vendor/bootstrap/less/mixins/panels";
@@ -34,11 +38,15 @@
 @import "../vendor/bootstrap/less/mixins/table-row";
 
 // Mixins: Skins
+/*
+*/
 @import "../vendor/bootstrap/less/mixins/background-variant";
 @import "../vendor/bootstrap/less/mixins/border-radius";
 @import "../vendor/bootstrap/less/mixins/gradients";
 
 // Mixins: Layout
+/*
+*/ 
 @import "../vendor/bootstrap/less/mixins/clearfix";
 @import "../vendor/bootstrap/less/mixins/center-block";
 @import "../vendor/bootstrap/less/mixins/nav-vertical-align";
@@ -46,11 +54,15 @@
 @import "../vendor/bootstrap/less/mixins/grid";
 
 // Reset
+/*
+*/
 @import "../vendor/bootstrap/less/normalize";
 @import "../vendor/bootstrap/less/print";
 @import "../vendor/bootstrap/less/glyphicons";
 
 // Core CSS
+/*
+*/
 @import "../vendor/bootstrap/less/scaffolding";
 @import "../vendor/bootstrap/less/type";
 @import "../vendor/bootstrap/less/code";
@@ -60,6 +72,8 @@
 @import "../vendor/bootstrap/less/buttons";
 
 // Components
+/*
+*/
 @import "../vendor/bootstrap/less/component-animations";
 @import "../vendor/bootstrap/less/dropdowns";
 @import "../vendor/bootstrap/less/button-groups";
@@ -74,6 +88,7 @@
 @import "../vendor/bootstrap/less/jumbotron";
 @import "../vendor/bootstrap/less/thumbnails";
 @import "../vendor/bootstrap/less/alerts";
+
 @import "../vendor/bootstrap/less/progress-bars";
 @import "../vendor/bootstrap/less/media";
 @import "../vendor/bootstrap/less/list-group";
@@ -83,11 +98,15 @@
 @import "../vendor/bootstrap/less/close";
 
 // Components w/ JavaScript
-@import "../vendor/bootstrap/less/modals";
-@import "../vendor/bootstrap/less/tooltip";
-@import "../vendor/bootstrap/less/popovers";
+/*
+*/
+@import "../vendor/bootstrap/less/modals";//slide from top(gallery!)
+@import "../vendor/bootstrap/less/tooltip";//side of buttons
+@import "../vendor/bootstrap/less/popovers";//hover buttons(like, share, edit)
 @import "../vendor/bootstrap/less/carousel";
 
 // Utility classes
+/*
+*/
 @import "../vendor/bootstrap/less/utilities";
 @import "../vendor/bootstrap/less/responsive-utilities";
