--- a/wp-content/themes/tm/assets/less/layouts/_posts.less
+++ b/wp-content/themes/tm/assets/less/layouts/_posts.less
@@ -3,3 +3,46 @@
 .hentry .byline { }
 .hentry .entry-content { }
 .hentry footer { }
+
+
+.nz-thetags{
+      padding-bottom: 15px;
+}
+.the-tags{
+      list-style: none;
+      padding: 0;
+      display: inline;
+}
+.the-tags li{ 
+      display: inline;
+
+}
+/*
+// ** posts
+.post-id {}
+.post {}
+.page {}
+.attachment {}
+.sticky {}
+.hentry {}
+.category-misc {}
+.category-example {}
+.tag-news {}
+.tag-wordpress {}
+.tag-markup {}
+
+*/
+
+/*
+// ** format
+.format-standard {}
+.format-image {}
+.format-gallery {}
+.format-chat {}
+.format-link {}
+.format-quote {}
+.format-status {}
+.format-video {}
+
+*/
+
