--- a/wp-content/themes/tm/assets/less/layouts/_sidebar.less
+++ b/wp-content/themes/tm/assets/less/layouts/_sidebar.less
@@ -1,1 +1,15 @@
 .sidebar { }
+
+.aside-item{
+      margin-top: 15px;
+}
+
+
+//sidebar fbs
+
+
+/*
+.is_stuck #calendar{
+      margin-top: 70px;
+}
+*/
