--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -1,3 +1,5 @@
+
+@import "../vendor/fontawesome/less/font-awesome";
 // Bootstrap
 @import "_bootstrap";
 
@@ -14,22 +16,32 @@
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
+
+//font awesome
+/*@import "../vendor/fontawesome/less/variables";*/
  
+//front slider
+@import "nz/flexslider";   
+@import "nz/ml-slider";  
 //nz  
 @import "nz/fancybox";    // fancybox
-@import "nz/general";    // general body styles
 @import "nz/carousel";    // NZ carousel
-@import "nz/list-styles/common";    // css3 effects
+@import "nz/gravity-forms";    // gravity forms styles
 @import "nz/datetimepicker";    // datetimepicker for event form
 @import "nz/fullcalendar";    // calendar 
-@import "nz/flexslider";    // slider
-@import "nz/ml-slider";    // slider
-@import "nz/social-icons";    // top social icons
-@import "nz/facebook-share";    // facebook share options
-@import "nz/sidebar";    // facebook share options
-@import "nz/top-bar";    // top menu
+@import "nz/nz-social-widgets";
+
+// top social icons
+@import "nz/social-icons";  
+@import "nz/next-prev-links";   //on posts
+@import "nz/top-navbar";    // top menu fixed
 @import "nz/search";    // search button bar
-@import "nz/footer-menu";    // footer menu
-@import "nz/event";    // footer menu
-@import "nz/gravity-forms";    // footer menu
+
+
+// event post type
+@import "nz/event";    
+@import "nz/general";    // general body styles
+// list 1 front
+@import "nz/lists/nz-posts-list-1";    
     
+//@import "nz/list-styles/common";    // css3 effects
