--- a/wp-content/themes/tm/assets/less/nz/event.less
+++ b/wp-content/themes/tm/assets/less/nz/event.less
@@ -27,10 +27,12 @@
 }
 
 /* EVENT SINGLE*/
+/*
 .single .event .published{
       margin-bottom: 20px;
 
 }
+*/
 .single .event .col-lg-6{
       padding: 5px;
 }
