--- a/wp-content/themes/tm/assets/less/nz/general.less
+++ b/wp-content/themes/tm/assets/less/nz/general.less
@@ -1,12 +1,3 @@
-//archives
-.archive ul,
-.home ul{
-      list-style: none;
-      padding: 0;
-}
-.nz-list h1.list-head{
-
-}
 
 /*
       COL-LIST 
@@ -38,15 +29,16 @@ ul.col-list h2.entry-title{
       font-family:  Tahoma, Geneva, sans-serif;
 }
 //post meta
+/*      
 .published{
       font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 
 }
+*/
 
 //thumbnails
 // @todo nz prueba
 /*
-*/
 ul.col-list .thumbnail,
 ul.row-list .thumbnail{
       border-radius: 4px;
@@ -57,16 +49,14 @@ ul.col-list{
       list-style: none;
 }
 
-.archive .thumbnail:hover,
-.home .thumbnail:hover{
-      box-shadow:         0px 0px 7px 0px rgba(50, 50, 50, 0.75);
-}
+*/
+
 
 
 .list-heading{
-      border-top: 1px solid black;
+      /*border-top: 1px solid black;*/
       border-bottom: 1px solid black;
-      margin-top: 15px;
+      /*margin-top: 15px;*/
       margin-bottom: 25px;
       position: relative;
 
@@ -86,9 +76,6 @@ ul.col-list{
       margin-left: -10px;;
 
 }
-/* Glyph, by Harry Roberts */
-/*
-*/
 .list-heading hr{ 
       padding: 0; 
       border: none; 
@@ -131,25 +118,13 @@ ul.col-list{
       color: #fff;
 }
 
-//next previous links
-.next-prev-links{
-      border-top: 1px solid black;
-      border-bottom: 1px solid black;
-      overflow: hidden;
-}
-.next-prev-links .prev{
-      float: left;
-      border-right: 1px solid black;
-      width: 49%;
-      padding-top: 10px;
-      padding-bottom: 10px;
-}
-.next-prev-links span{
-      /*font-size: 24px;*/
-}
 
-.next-prev-links .next{
-      float: left;
-      width: 49%;
+#infscr-loading{
+      background-color: #aaa;
+      padding: 7px;
+      border-radius: 5px;
+      position: fixed;
+      z-index: 1000;
+      bottom: 50px;
 
 }
