--- a/wp-content/themes/tm/assets/less/nz/ml-slider.less
+++ b/wp-content/themes/tm/assets/less/nz/ml-slider.less
@@ -1,4 +1,18 @@
-
+.nz-slider{
+      padding-left: 5px;
+      padding-right: 5px;
+}
+.ml-slider{
+      /*      
+            padding-left: 5px;
+            padding-right: 5px;
+      */
+}
+/*
+.ml-slider:hover{
+      box-shadow:         0px 0px 7px 0px rgba(50, 50, 50, 0.75);
+}
+*/
 .ml-slider .slides{
       border-radius: 5px;
       overflow: hidden;
@@ -19,7 +33,7 @@
       right: 30%;
       bottom: 20px;
       color: black;
-      text-transform: uppercase;
+      /*text-transform: uppercase;*/
       transition: background 500ms linear;
 
 }
