--- a/wp-content/themes/tm/assets/less/nz/flexslider.less
+++ b/wp-content/themes/tm/assets/less/nz/flexslider.less
@@ -182,15 +182,15 @@ html[xmlns] .slides {display: block;}
 }
 
 .metaslider .caption-wrap {
-    position: absolute;
+    /*position: absolute;*/
     /*bottom: 0;*/
-    top: 0;;
+    /*top: 0;;*/
     /*left: 0;*/
     color: white;
-    margin: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
+    /*margin: 0;*/
+    /*display: block;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
     /*line-height: 1.4em;*/
 }
 
