--- a/wp-content/themes/tm/assets/less/nz/social-icons.less
+++ b/wp-content/themes/tm/assets/less/nz/social-icons.less
@@ -1,11 +1,23 @@
 
+//top facebok like
+.nz-fblike-iframe{
+      float: left;
+      width: 140px; 
+      /*overflow: hidden;*/
+      margin-top: 10px;
+} 
+.nz-fblike-iframe iframe{
+      float:  right;
+      width: 120px; 
+} 
+
 //social icons
 #social-icons-top{
-      margin-top: 40px;
-      margin-left: 30px;
-}
-#social-icons-top ul li{
+      float: left;
       list-style: none;
+      padding: 0;
+}
+#social-icons-top li{
       float: left;
       margin: 3px;
 }
@@ -14,9 +26,9 @@
       display: block;
       height: 35px;
       width: 35px;
-      background-color: black;
-      /*background-color: #333;*/
+      border: 1px solid black;
       border-radius: 5px;
+      text-align: center;
 }
 #social-icons-top a:hover{
       background-color: rgba(12,160,230,0.8);
@@ -28,16 +40,22 @@
       transition: background-color 300ms ease-in-out;
 
 } 
+#social-icons-top i{
+      margin-top: 10px;
+      vertical-align: middle;
+
+}
+
+/*
 #social-icons-top span{
       display: block;
       width: 100%;
       height: 100%;
       background-size: 100% 100%;
 }
-/*icons*/
+//icons
 #social-icons-top .social-facebook{
       background-image: url(social-icons/facebook.png);
-
 }
 #social-icons-top .social-twitter{
       background-image: url(social-icons/twitter.png);
@@ -51,3 +69,5 @@
       background-image: url(social-icons/pinterest.png);
 
 }
+
+*/
