--- a/wp-content/themes/tm/assets/less/nz/event.less
+++ b/wp-content/themes/tm/assets/less/nz/event.less
@@ -45,6 +45,9 @@
 }
 
 /* EVENT ARCHIVE */
+ul.event-list{
+      padding: 0 0 0 10px;
+}
 
 ul.event-list li{ //item
                   border: 1px solid black;
@@ -52,7 +55,7 @@ ul.event-list li{ //item
                   overflow: hidden;
                   position: relative;
                   margin-bottom: 10px;
-                                               margin-left: 10px;
+                  /*margin-left: 10px;*/
 
 }
 
@@ -99,13 +102,13 @@ ul.event-list .thumb-detail .glyphicon{      //item description
       border: 1px solid black;
       border-radius: 5px;
       overflow: hidden;
-      
+
 }
 #calendar .fc-header{
       background: linear-gradient(45deg,  rgba(0,0,0,0.35) 0%,rgba(0,0,0,0) 100%);
 
       border-bottom: 1px solid black;
-      
+
 
 }
 /*      
