--- a/wp-content/themes/tm/assets/less/nz/lists/nz-posts-list-1.less
+++ b/wp-content/themes/tm/assets/less/nz/lists/nz-posts-list-1.less
@@ -9,6 +9,7 @@
       }
 
       article{
+            /*height: 304px;*/
             position: relative;
             margin-bottom: 10px;
             overflow: hidden;
