--- a/wp-content/themes/tm/assets/less/nz/carousel.less
+++ b/wp-content/themes/tm/assets/less/nz/carousel.less
@@ -10,29 +10,22 @@
       .carousel{
             overflow: hidden;
             /*height: 330px;*/
-            /*background-color: #aaa;*/
-            border-radius: 5px;
+            margin: 0 -10px;
       }
       //carousel 
       .carousel-inner {
-            /*overflow: hidden;*/
             border-radius: 5px;
             width: 66%;
             float: left;
-            height: 315px;
+            height: 320px;
+
 
       }
-      .carousel-inner a{
-            /*height: 330px;*/
-            /*overflow: hidden;*/
-      }
+     
       .carousel-inner img{
             margin-left: auto;
             margin-right: auto;
             width: 100%;
-            /*max-height: 100%;*/
-            /*max-height: 100%;*/
-
       }
 
 
