--- a/wp-content/themes/tm/assets/less/nz/event.less
+++ b/wp-content/themes/tm/assets/less/nz/event.less
@@ -46,7 +46,7 @@
 
 /* EVENT ARCHIVE */
 ul.event-list{
-      padding: 0 0 0 10px;
+      padding: 0px;
 }
 
 ul.event-list li{ //item
@@ -55,10 +55,8 @@ ul.event-list li{ //item
                   overflow: hidden;
                   position: relative;
                   margin-bottom: 10px;
-                  /*margin-left: 10px;*/
-
 }
-
+ 
 ul.event-list h2.entry-title{//item title
                              border-bottom: 1px solid black;
                              font-size: @font-size-h3;
