--- a/wp-content/themes/tm/assets/less/_bootstrap.less
+++ b/wp-content/themes/tm/assets/less/_bootstrap.less
@@ -58,7 +58,7 @@
 */
 @import "../vendor/bootstrap/less/normalize";
 @import "../vendor/bootstrap/less/print";
-@import "../vendor/bootstrap/less/glyphicons";
+/*@import "../vendor/bootstrap/less/glyphicons";*/
 
 // Core CSS
 /*
