--- a/wp-content/themes/tm/assets/less/_variables.less
+++ b/wp-content/themes/tm/assets/less/_variables.less
@@ -4,6 +4,7 @@
 /*@brand-primary:         #27ae60;*/
 @brand-primary:         #000;
 @text-color: #000;
+//@navbar-default-link-active-color: black;
 
 // Glyphicons path
 // -------------------------
