--- a/wp-content/themes/tm/assets/less/nz/event.less
+++ b/wp-content/themes/tm/assets/less/nz/event.less
@@ -8,7 +8,7 @@
       border-top-left-radius: 5px;
       padding: 3px;
       font-weight: bold;
-
+      margin-top: 15px;
       /*      
       */
       background: -moz-linear-gradient(45deg,  rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
