--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -16,17 +16,17 @@
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
+@import "layouts/gform";            // gravity forms styles
 
 //font awesome
 /*@import "../vendor/fontawesome/less/variables";*/
  
 //front slider
-@import "nz/flexslider";   
-@import "nz/ml-slider";  
+@import "nz/slider/flexslider";   
+@import "nz/slider/ml-slider";  
 //nz  
 @import "nz/fancybox";    // fancybox
-@import "nz/carousel";    // NZ carousel
-@import "nz/gravity-forms";    // gravity forms styles
+@import "nz/slider/carousel";    // NZ carousel
 @import "nz/datetimepicker";    // datetimepicker for event form
 @import "nz/fullcalendar";    // calendar 
 @import "nz/nz-social-widgets";
@@ -34,9 +34,7 @@
 // top social icons
 @import "nz/social-icons";  
 @import "nz/next-prev-links";   //on posts
-@import "nz/top-navbar";    // top menu fixed
 @import "nz/search";    // search button bar
-
 
 // event post type
 @import "nz/event";    
@@ -45,3 +43,4 @@
 @import "nz/lists/nz-posts-list-1";    
     
 //@import "nz/list-styles/common";    // css3 effects
+ 
