--- a/wp-content/themes/tm/assets/less/layouts/_general.less
+++ b/wp-content/themes/tm/assets/less/layouts/_general.less
@@ -1,5 +1,5 @@
 body{
-      		//background:url(bubbles.png) repeat fixed;
+      //background:url(bubbles.png) repeat fixed;
 
 }
 // Content wrapper
@@ -7,3 +7,12 @@ body{
 
 // Main content area
 .main { }
+
+#infscr-loading{
+      background-color: #aaa;
+      padding: 7px;
+      border-radius: 5px;
+      position: fixed;
+      z-index: 1000;
+      bottom: 50px;
+}
