--- a/wp-content/themes/tm/assets/less/nz/slider/carousel.less
+++ b/wp-content/themes/tm/assets/less/nz/slider/carousel.less
@@ -11,11 +11,11 @@
       //carousel 
       .carousel-inner {
             border-radius: 5px;
-            width: 66%;
+            width: 99%;
             float: left;
             height: 320px;
       }
-     
+
       .carousel-inner img{
             width: 100%;
       }
@@ -39,11 +39,27 @@
 
       //indicator
       .carousel-indicators{
+            display: none;
+      }  
+
+}
+
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { 
+      .carousel-inner {
+            border-radius: 5px;
+            width: 66%;
+            float: left;
+            height: 320px;
+      }
+
+      .carousel-indicators{
             display: block;
             float: left;
             width:32%;
             /*margin-left: 1%;*/
-            margin-left: 22px;
+            margin-left: 15px;
             padding: 0;
       }  
       .carousel-indicators li{
@@ -60,5 +76,4 @@
       .carousel-indicators li img{
             width: 100%;
       }
-
 }
