--- a/wp-content/themes/tm/assets/less/layouts/_footer.less
+++ b/wp-content/themes/tm/assets/less/layouts/_footer.less
@@ -1,12 +1,5 @@
 .content-info { }
 
-//footer menu
-/* Extra small devices (phones, less than 768px) */
-/*
-.content-info{
-margin-bottom: 35px;
-}
-*/
 
 #main-menu-footer {
       width: 100%;
@@ -25,8 +18,7 @@ margin-bottom: 35px;
 
       #main-menu-footer {
             margin-top: 15px;
-            /*border-top: 1px solid #333;*/
-
+            padding-bottom: 15px;
       }
       #main-menu-footer li{
             width: 20%;
