--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -26,7 +26,7 @@
 @import "nz/slider/ml-slider";  
 //nz  
 @import "nz/fancybox";    // fancybox
-@import "nz/slider/carousel";    // NZ carousel
+/*@import "nz/slider/carousel";    // NZ carousel*/
 @import "nz/datetimepicker";    // datetimepicker for event form
 @import "nz/fullcalendar";    // calendar 
 @import "nz/nz-social-widgets";
