--- a/wp-content/themes/tm/assets/less/nz/general.less
+++ b/wp-content/themes/tm/assets/less/nz/general.less
@@ -28,28 +28,7 @@ ul.col-list h2.entry-title{
 .single .entry-content{
       font-family:  Tahoma, Geneva, sans-serif;
 }
-//post meta
-/*      
-.published{
-      font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 
-}
-*/
-
-//thumbnails
-// @todo nz prueba
-/*
-ul.col-list .thumbnail,
-ul.row-list .thumbnail{
-      border-radius: 4px;
-} 
-
-ul.row-list,
-ul.col-list{
-      list-style: none;
-}
-
-*/
 
 
 
@@ -107,6 +86,7 @@ ul.col-list{
 .label{
 
       margin-left: 5px;
+      margin-top: 3px;
       border: 1px solid #000;
       font-size: 90%;
 
