--- a/wp-content/themes/tm/assets/less/nz/nz-social-widgets.less
+++ b/wp-content/themes/tm/assets/less/nz/nz-social-widgets.less
@@ -1,13 +1,15 @@
+/*
 aside .nz-fblike{
-      max-width: 100%;
-      overflow: hidden;
+      //max-width: 100%;
+//overflow: hidden;
 }
+*/
 aside .nz-fblikebox{
       width: 300px;
       margin: 0 auto;
 }
 
 article .nz-fbcomments{
-            border-top: 1px solid black;
+      border-top: 1px solid black;
 
-}
+} 
