--- a/wp-content/themes/tm/assets/less/nz/slider/carousel.less
+++ b/wp-content/themes/tm/assets/less/nz/slider/carousel.less
@@ -2,27 +2,22 @@
 .carousel-indicators{
       display: none;     
 }
-/* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) { 
-      .carousel{
-            overflow: hidden;
-            margin: 0 -10px;
-      }
-      //carousel 
-      .carousel-inner {
-            border-radius: 5px;
+
+.carousel-inner {
+      width: 100%;
+      /*height: 220px;*/
+      /*float: left;*/
+      border-radius: 5px;
+      overflow: hidden;
+
+      img{
             width: 100%;
-            float: left;
-            height: 320px;
+            min-width: 400px;
+
+            /*min-height: 200px;*/
       }
 
-      .carousel-inner img{
-            width: 100%;
-      }
-      .carousel-inner a{
-            position: relative;
-      }
-      .carousel-inner .carousel-caption{
+      .carousel-caption{
             position: absolute;
             top: 245px;
             z-index: 200;
@@ -33,14 +28,24 @@
             color: black;
             transition: background 500ms linear;
       }
+
+}
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { 
+      .carousel{
+            overflow: hidden;
+            margin: 0 -10px;
+      }
+      .carousel-inner {
+
+            a{
+                  position: relative;
+            }
+      }
+
       .carousel-inner:hover  .carousel-caption{
             background-color: rgba(255, 255, 255, 0.9);
       }
-
-      //indicator
-      .carousel-indicators{
-            display: none;
-      }  
 
 }
 
@@ -61,19 +66,20 @@
             /*margin-left: 1%;*/
             margin-left: 15px;
             padding: 0;
-      }  
-      .carousel-indicators li{
-            float: left;
-            width: 49%;
-            margin-left: 1%;
-            margin-bottom: 1%;
-            height: 50%;
 
-            border-radius: 5px;
-            overflow: hidden;
+            li{
+                  float: left;
+                  width: 49%;
+                  margin-left: 1%;
+                  margin-bottom: 1%;
+                  height: 50%;
 
-      } 
-      .carousel-indicators li img{
-            width: 100%;
+                  border-radius: 5px;
+                  overflow: hidden;
+
+                  img{
+                        width: 100%;
+                  } 
+            }  
       }
 }
