--- a/wp-content/themes/tm/assets/less/nz/slider/ml-slider.less
+++ b/wp-content/themes/tm/assets/less/nz/slider/ml-slider.less
@@ -2,38 +2,43 @@
       padding-left: 5px;
       padding-right: 5px;
 }
-.ml-slider{
-      /*      
-            padding-left: 5px;
-            padding-right: 5px;
-      */
-}
-/*
-.ml-slider:hover{
-      box-shadow:         0px 0px 7px 0px rgba(50, 50, 50, 0.75);
-}
-*/
+
 .ml-slider .slides{
       border-radius: 5px;
       overflow: hidden;
 }
-.ml-slider .slides:hover .caption{
-      border-radius: 5px;
-      overflow: hidden;
-      background-color: rgba(255, 255, 255, 0.9);
-}
 .ml-slider .caption{
-
       text-align: center;
-      font-size: @font-size-h2;
+      font-size: @font-size-h4;
       background-color: rgba(255, 255, 255, 0.5);
       border-radius: 5px;
       position: absolute;
-      left: 30%;
-      right: 30%;
-      bottom: 20px;
+      left: 15%;
+      right: 15%;
+      bottom: 10px;
       color: black;
-      /*text-transform: uppercase;*/
-      transition: background 500ms linear;
-
 }
+
+.flex-control-nav { 
+      bottom: -15px;
+}
+
+
+.flex-control-paging li a {
+      width: 5px; height: 5px;
+}
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { 
+      .ml-slider .caption{
+            font-size: @font-size-h2;
+            bottom: 20px;
+            transition: background 500ms linear;
+
+      }
+      .ml-slider .slides:hover .caption{
+            background-color: rgba(255, 255, 255, 0.9);
+      }
+
+      .flex-control-paging li a {width: 10px; height: 10px;}
+}
+
