--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -15,6 +15,7 @@
 @import "layouts/_footer";           // Footer styling
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
+@import "layouts/pages/staff";       // staff page styling
 @import "layouts/_posts";            // Post styling
 @import "layouts/gform";            // gravity forms styles
 
