--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -21,10 +21,11 @@
 
 //font awesome
 /*@import "../vendor/fontawesome/less/variables";*/
- 
-//front slider
+
+//flex slider
 @import "nz/slider/flexslider";   
 @import "nz/slider/ml-slider";  
+
 //nz  
 @import "nz/fancybox";    // fancybox
 /*@import "nz/slider/carousel";    // NZ carousel*/
@@ -41,7 +42,7 @@
 @import "nz/event";    
 @import "nz/general";    // general body styles
 // list 1 front
-@import "nz/lists/nz-posts-list-1";    
-    
-//@import "nz/list-styles/common";    // css3 effects
- 
+@import "nz/lists/nz-posts-list-1";
+
+//plugins
+@import "plugins/csButtons";
