--- a/wp-content/themes/tm/assets/less/layouts/_general.less
+++ b/wp-content/themes/tm/assets/less/layouts/_general.less
@@ -1,5 +1,5 @@
 body{
-      //background:url(bubbles.png) repeat fixed;
+    //background:url(bubbles.png) repeat fixed;
 
 }
 // Content wrapper
@@ -9,10 +9,13 @@ body{
 .main { }
 
 #infscr-loading{
-      background-color: #aaa;
-      padding: 7px;
-      border-radius: 5px;
-      position: fixed;
-      z-index: 1000;
-      bottom: 50px;
+    background-color: #aaa;
+    padding: 7px;
+    border-radius: 5px;
+    position: fixed;
+    z-index: 1000;
+    bottom: 50px;
+}
+.sam-container{
+    text-align: center;
 }
