--- a/wp-content/themes/tm/assets/less/main.less
+++ b/wp-content/themes/tm/assets/less/main.less
@@ -19,30 +19,19 @@
 @import "layouts/_posts";            // Post styling
 @import "layouts/gform";            // gravity forms styles
 
-//font awesome
-/*@import "../vendor/fontawesome/less/variables";*/
+/*components*/
+@import "components/social";         // WordPress media
+@import "components/next-prev-links";         // WordPress media
 
-//flex slider
-@import "nz/slider/flexslider";   
-@import "nz/slider/ml-slider";  
+/*layouts*/
+@import "layouts/event";    
+@import "layouts/general";    // general body styles
+@import "layouts/lists/nz-posts-list-1";
+@import "layouts/search";    // search button bar
 
-//nz  
-@import "nz/fancybox";    // fancybox
-/*@import "nz/slider/carousel";    // NZ carousel*/
-@import "nz/datetimepicker";    // datetimepicker for event form
-@import "nz/fullcalendar";    // calendar 
-@import "nz/nz-social-widgets";
-
-// top social icons
-@import "nz/social-icons";  
-@import "nz/next-prev-links";   //on posts
-@import "nz/search";    // search button bar
-
-// event post type
-@import "nz/event";    
-@import "nz/general";    // general body styles
-// list 1 front
-@import "nz/lists/nz-posts-list-1";
-
-//plugins
-@import "plugins/csButtons";
+/*plugins*/
+@import "plugins/slider/flexslider";   
+@import "plugins/slider/ml-slider";  
+@import "plugins/fancybox";    // fancybox
+@import "plugins/datetimepicker";    // datetimepicker for event form
+@import "plugins/fullcalendar";    // calendar 
