--- a/wp-content/themes/tm/assets/less/layouts/_header.less
+++ b/wp-content/themes/tm/assets/less/layouts/_header.less
@@ -1,115 +1,97 @@
-.banner { }
-
+.site-logo{
+    margin: 0 10px;
+}
+.site-logo img{
+    width: 95%;
+}
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
-      #top-social-zone{
-            margin-top: 40px;
-      }
-
+    #top-social-zone{
+        margin-top: 40px;
+    }
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) {
-      #top-social-zone{
-            margin-top: 60px;
-      }
+    #top-social-zone{
+        margin-top: 40px;
+    }
 }
 
 //transition for navbar fixed
 .navbar-default{
-      border-left: none;
-      border-right: none;
-      background-color: rgb(255,255,255);
+    border-left: none;
+    border-right: none;
+    background-color: rgb(255,255,255);
 }
 
-.navbar-fixed-top.navbar-default{
-      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+body.fixed-bars .navbar-default{
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
 }
 
 //center navbar items
 .navbar-nav.nav-justified > li{
-      float:none;
+    float:none;
 }
 
 .navbar .nav > li > a{
-      font-size:      @font-size-base;
-      color: black;
+    font-size:      @font-size-base;
+    color: black;
+}
+//fix bonce when top menu gets fixed
+body.fixed-bars{
+    padding-top: 70px;
 } 
-
-/*body.navbar-fixed-fix*/
-.navbar-fixed-fix .site-logo{
-      visibility: hidden;
+body.fixed-bars .site-logo{
+    visibility: hidden;
 }
 
 /* HOME MENU TM DYNAMIC */
 .navbar-default .menu-tm{
-      position: relative;
+    position: relative;
 }
 .navbar-default .menu-tm img{
-      position: absolute;
-      left: 25px;
-      top: -15px;
-      width: 80px;
+    position: absolute;
+    left: 25px;
+    top: -15px;
+    width: 80px;
 
-      visibility: hidden;
-      opacity:0;
-      /*opacity:0.5;*/
-      /*transition:visibility 0s linear 0.5s,opacity 0.5s linear;*/
+    visibility: hidden; 
+    opacity:0;
 
-      /*      
-            -webkit-transform: scale(0.01);
-            -moz-transform: scale(0.01);
-            -o-transform: scale(0.01);
-            -ms-transform: scale(0.01);
-      */
-      transform: scale(0.01);
-      /*transform: scale(0.5);*/
-      -webkit-transition: all 0.3s ease-in-out 0.2s;
-      -moz-transition: all 0.3s ease-in-out 0.2s;
-      -o-transition: all 0.3s ease-in-out 0.2s;
-      -ms-transition: all 0.3s ease-in-out 0.2s;
-      transition: all 0.3s ease-in-out 0.2s;
+    transform: scale(0.01);
+    -webkit-transition: all 0.3s ease-in-out 0.2s;
+    -moz-transition: all 0.3s ease-in-out 0.2s;
+    -o-transition: all 0.3s ease-in-out 0.2s;
+    -ms-transition: all 0.3s ease-in-out 0.2s;
+    transition: all 0.3s ease-in-out 0.2s;
 }
-
-
-/* Extra small devices (phones, less than 768px) */
-/* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
-      .navbar-default .menu-tm img{
+    .navbar-default .menu-tm img{
 
+    }
+    body.fixed-bars .navbar-default .menu-tm img{
+        left: 10px;
+        top: 0px;
 
-      }
-      .navbar-fixed-fix .navbar-default .menu-tm img{
-            left: 10px;
-            top: 0px;
+        visibility:visible;
+        opacity:1;
 
-            visibility:visible;
-            opacity:1;
-            /*transition-delay:0s;*/
+        transform: scale(1);
 
-            transform: scale(1);
-
-            -webkit-transition-delay: 0.2s;
-            -moz-transition-delay: 0.2s;
-            -o-transition-delay: 0.2s;
-            -ms-transition-delay: 0.2s;
-            transition-delay: 0.2s;
-      }
+        -webkit-transition-delay: 0.2s;
+        -moz-transition-delay: 0.2s;
+        -o-transition-delay: 0.2s;
+        -ms-transition-delay: 0.2s;
+        transition-delay: 0.2s;
+    }
 }
 
-/* Medium devices (desktops, 992px and up) 
-@media (min-width: @screen-md-min) { ... }
-*/
-
-/* Large devices (large desktops, 1200px and up) 
-@media (min-width: @screen-lg-min) { ... }
-*/
-
 #main-menu-top .active a{
-      font-weight: bold;
-      color: #000;
-      text-decoration: underline;
+    font-weight: bold;
+    color: #000;
+    text-decoration: underline;
 }
