--- a/wp-content/themes/tm/assets/less/layouts/_footer.less
+++ b/wp-content/themes/tm/assets/less/layouts/_footer.less
@@ -1,12 +1,24 @@
 
-#main-menu-footer {
+#menu-footer {
+    /*display: none;*/
+    visibility: hidden;
+    opacity: 0;
+    
     position: fixed;
     bottom: 0;
     z-index: 1000;
     width: 100%;
     border-top: 1px solid #eee;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgb(255,255,255);
     margin:0;
+    text-transform: uppercase;
+    font-size: @font-size-h6;
+
+    -webkit-transition: all 0.3s ease-in-out 0.2s;
+    -moz-transition: all 0.3s ease-in-out 0.2s;
+    -o-transition: all 0.3s ease-in-out 0.2s;
+    -ms-transition: all 0.3s ease-in-out 0.2s;
+    transition: all 0.3s ease-in-out 0.2s;
     li{
         text-align: center;
         width: 100%;
@@ -28,22 +40,20 @@
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
-
-
-    #main-menu-footer.stick {
-        position: fixed;
-        bottom: 0;
-        z-index: 1000;
+    .nzMenuReplace{
+        display: none; 
     }
 
-    #main-menu-footer {
-        position: relative;
-        z-index: 200;
-        font-size: @font-size-h6;
+    #menu-footer {
         li{
             width: 20%;
         }
     } 
+    body.fixed-bars #menu-footer{
+        visibility: visible;
+        opacity: 1;
+        /*display: block;*/
+    }
 
 
 }
