updated buy tickets btn

--- a/wp-content/themes/tm/assets/less/layouts/_header.less
+++ b/wp-content/themes/tm/assets/less/layouts/_header.less
@@ -19,6 +19,15 @@
     }
 }
 
+.btn-buytickets{
+    background-image: url('btn-buytickets.jpg');
+    background-size: 100%;
+    width: 120px;
+    height: 30px;
+    text-indent: 100000px;
+    overflow: hidden;
+}
+
 //transition for navbar fixed
 .navbar-default{
     border-left: none;
